--- a/react-js/package.json
+++ b/react-js/package.json
@@ -12,18 +12,18 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "z-pwa-install-dialog": "^0.7.7"
+    "z-pwa-install-dialog": "1.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
-    "@vitejs/plugin-react-swc": "^3.7.2",
-    "eslint": "^9.18.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "vite": "^6.0.11"
+    "@eslint/js": "^9.27.0",
+    "@types/react": "^17.0.86",
+    "@types/react-dom": "^17.0.26",
+    "@vitejs/plugin-react-swc": "^3.10.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^15.15.0",
+    "vite": "^6.3.5"
   }
 }
